--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,23 +13,23 @@ const currentYear = new Date().getFullYear();
         <Icon icon="rocket-launch" size="1.2em" />
       </Link>
     </p>
-    <p>&copy; {currentYear} Stefan Gogov</p>
+    <p>&copy; 2024 Nadir Bensadi</p>
   </div>
+
   <p class="socials">
-    <Link class="link" href="https://github.com/stekatag" external>Github</Link>
-    <Link class="link" href="https://codingly.netlify.app/" external>Blog</Link>
-    <Link class="link" href="https://sgogov.com/" external>
-      Photography Portfolio
-    </Link>
+    <Link class="link" href="https://github.com/Nadir-Bsd" external>Github</Link>
+
     <Link
       class="link"
-      href="https://www.linkedin.com/in/stefan-gogov/"
+      href="https://www.linkedin.com/in/nadir-bensadi-847aab226/"
       external
     >
       LinkedIn
     </Link>
   </p>
 </footer>
+
+
 <style>
   footer {
     display: flex;
