--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,14 +14,9 @@ const textLinks: { label: string; href: string }[] = [
 const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
   {
     label: "GitHub",
-    href: "https://github.com/stekatag",
-    icon: "github-logo",
-  },
-  {
-    label: "Photography Portfolio",
-    href: "https://sgogov.com",
-    icon: "camera",
-  },
+    href: "https://github.com/Nadir-Bsd",
+    icon: "github-logo"
+  }
 ];
 ---
 
@@ -34,7 +29,7 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
         size="1.6em"
         gradient
       />
-      Stefan Gogov
+      Nadir Bensadi
     </a>
     <menu-button>
       <template>
