--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Link from "../components/ui/link.astro";
 import Icon from "../components/ui/Icon/Icon.astro";
 ---
 
-<BaseLayout title="About | Stefan Gogov" description="About Stefan Gogov">
+<BaseLayout title="About | Nadir Bensadi" description="About Nadir Bensadi">
   <div class="stack gap-20">
     <header class="wrapper hero">
       <Hero align="center" title="About мe" tagline="A Glimpse into My Life" />
