--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Link from "../components/ui/link.astro";
       <header class="hero">
         <Hero
           title="I build things for the {Web}"
-          tagline="Hi, 👋 I'm Stefan. I'm a web developer enthusiast and photographer."
+          tagline="Hi, 👋 I'm Nadir Bensadi. I'm a web developer enthusiast and photographer."
           align="start"
         >
           <div class="links">
@@ -31,12 +31,11 @@ import Link from "../components/ui/link.astro";
         </Hero>
 
         <div class="avatar-wrapper">
-          <div class="overlay"></div>
           <img
-            alt="Headshot of Stefan"
+            alt="Headshot of Nadir"
             width="480"
-            height="620"
-            src="/assets/hero-img.webp"
+            height="620"  
+            src="/assets/photo_de_moi_costume.jpeg"
           />
         </div>
       </header>
@@ -82,7 +81,6 @@ import Link from "../components/ui/link.astro";
         border-radius: 2.5rem;
         object-fit: cover;
         position: relative;
-        filter: grayscale(75%) contrast(1);
       }
 
       .avatar-wrapper {
