--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,8 +7,8 @@ import RepoList from "../components/RepoList/RepoList";
 ---
 
 <BaseLayout
-  title="Projects | Stefan Gogov"
-  description="Learn about Stefan Gogov's most recent projects"
+  title="Projects | Nadir Bensadi"
+  description="Learn about Nadir Bensadi's most recent projects"
 >
   <div class="stack gap-20">
     <header class="wrapper hero">
@@ -26,10 +26,11 @@ import RepoList from "../components/RepoList/RepoList";
     <main class="wrapper stack gap-10">
       <RepoList client:load />
 
-      <div class="links">
+      <div class="links">  // tu dois comprendre ca
+
         <Link
           class="link"
-          href="https://github.com/stekatag"
+          href="https://github.com/Nadir-Bsd"
           style="rounded"
           external
         >
