--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-  title = "Stefan Gogov | Portfolio",
-  description = "The portfolio of Stefan Gogov",
+  title = "Nadir Bensadi | Portfolio",
+  description = "The portfolio of Nadir Bensadi",
 } = Astro.props;
 ---
 
