--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,8 +8,8 @@ import Skills from "../components/Skills.astro";
 ---
 
 <BaseLayout
-  title="Contact | Stefan Gogov"
-  description="Contact page of Stefan Gogov's personal portfolio."
+  title="Contact | Nadir Bensadi"
+  description="Contact page of Nadir Bensadi's personal portfolio."
 >
   <div class="stack gap-20">
     <header class="wrapper hero">
