--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,12 +12,10 @@ import Link from "../components/ui/link.astro";
   <div class="stack gap-20 lg:gap-48">
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
-        <Hero
-          title="I build things for the {Web}"
-          tagline="Hi, 👋 I'm Nadir Bensadi. I'm a web developer enthusiast and photographer."
-          align="start"
-        >
+
+        <Hero title="I build things for the {Web}" tagline="Hi, 👋 I'm Nadir Bensadi. I'm a web developer enthusiast and photographer." align="start" >
           <div class="links">
+
             <Link href="/contact" style="rounded">
               <Icon icon="readCV" size="1.33em" /> See Resume
             </Link>
@@ -27,6 +25,7 @@ import Link from "../components/ui/link.astro";
             <Link href="/projects" style="roundedInverted">
               <Icon icon="code" size="1.33em" /> Projects
             </Link>
+            
           </div>
         </Hero>
 
