--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -72,6 +72,7 @@
   --text-5xl: 4rem;
 
   /* Fonts */
+  --font-loader: @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
   --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --font-body: "Public Sans", var(--font-system);
