UPDATE: preload-page loading all time

--- a/src/components/preload.astro
+++ b/src/components/preload.astro
@@ -1,5 +1,5 @@
 
-<div class="loaded stack">
+<div class="preload stack" id="preloading-page">
     <!-- title -->
     <h1>Junior web developer</h1>
 
@@ -14,9 +14,8 @@
 </div>
 
 <style>
-    .loaded{
-        display: none;
-        /* display: flex; */
+    .preload{
+        display: flex;
         gap: 100px;
         justify-content: center;
         align-items: center;
@@ -54,6 +53,20 @@
                 background: green;
             }
         }
+    }
+
+    /* .loaded{
+        display: none;
+    } */
+
+    #preloading-page {
+        opacity: 1;
+        transition: opacity 3s ease-in-out;
+    }
+
+    #preloading-page.loaded {
+        opacity: 0;
+        display: none;
     }
     
 </style>
