--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,23 @@
 ---
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
 import BaseLayout from "../layouts/BaseLayout.astro";
-
+import { useEffect, useState } from "react";
 // Component Imports
 import Hero from "../components/Hero.astro";
 import Icon from "../components/ui/Icon/Icon.astro";
 import Link from "../components/ui/link.astro";
+import Preload from "../components/preload.astro";
+
+const delay = 3500; // Temps de chargement simulé
 ---
 
+<Preload />
 <BaseLayout>
   <div class="stack gap-20 lg:gap-48">
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
-
         <Hero title="I build things for the {Web}" tagline="Hi, 👋 I'm Nadir Bensadi. I'm a web developer enthusiast and photographer." align="start" >
           <div class="links">
-
             <Link href="/contact" style="rounded">
               <Icon icon="readCV" size="1.33em" /> See Resume
             </Link>
@@ -25,10 +27,8 @@ import Link from "../components/ui/link.astro";
             <Link href="/projects" style="roundedInverted">
               <Icon icon="code" size="1.33em" /> Projects
             </Link>
-            
           </div>
         </Hero>
-
         <div class="avatar-wrapper">
           <img
             alt="Headshot of Nadir"
