--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,130 +6,144 @@ import Icon from "../components/ui/Icon/Icon.astro";
 ---
 
 <BaseLayout title="About | Nadir Bensadi" description="About Nadir Bensadi">
-  <div class="stack gap-20">
-    <header class="wrapper hero">
-      <Hero align="center" title="About мe" tagline="A Glimpse into My Life" />
-      <img
-        alt="illustration of profile page"
-        src="/assets/illustrations/about.svg"
-      />
-    </header>
+    <div class="stack gap-20">
+        <header class="wrapper hero">
+            <Hero
+                align="center"
+                title="About мe"
+                tagline="A Glimpse into My Life"
+            />
+            <img
+                alt="illustration of profile page"
+                src="/assets/illustrations/about.svg"
+            />
+        </header>
 
-    <main class="wrapper about">
-      <section>
-        <h2 class="section-title">Background</h2>
-        <div class="content">
-          <p>
-            Hi there, 👋 I'm Stefan Gogov, a computer science student from
-            Bulgaria. I'm really passionate about programming, and I love
-            learning new things all the time. Solving challenging problems and
-            creating cool software solutions really excites me!
-          </p>
-          <p>
-            Besides programming, I'm also super enthusiastic about open-source
-            projects. I enjoy contributing to them because it allows me to give
-            back to the community, work with like-minded folks, and improve my
-            skills. Outside of the tech world, I have a hobby in photography. I
-            love capturing the beauty of the world through my lens and
-            preserving those special moments.
-          </p>
-          <p>
-            I'm truly thrilled to be on this journey of exploration and growth.
-            I'm always seeking new opportunities to expand my abilities and make
-            a positive impact through technology. Thanks for getting to know a
-            bit about me! 😊
-          </p>
-        </div>
-      </section>
-      <section>
-        <h2 class="section-title">Education</h2>
-        <div class="content">
-          <p>
-            🎓 Plovdiv University "Paisii Hilendarski" (2022 - Present) in
-            Software technologies and design
-          </p>
-          <p>
-            🎓 St. St Cyril and Metodiy High School Asenovgrad (2017 - 2022)
-          </p>
-        </div>
-      </section>
-      <section>
-        <h2 class="section-title">Skills</h2>
-        <div class="content">
-          <p>JavaScript, TypeScript, React, NodeJS, GraphQL, SQL, C#</p>
-        </div>
-      </section>
-      <section>
-        <Link class="link" href="/projects" style="rounded">
-          <Icon icon="code" size="1.33em" /> See My Projects
-        </Link>
-      </section>
-    </main>
-  </div>
+        <main class="wrapper about">
+            <section>
+                <h2 class="section-title">Background</h2>
+                <div class="content">
+                    <p>
+                        Hi there, 👋 I'm Bensadi Nadir, a computer science
+                        student from France. I'm really passionate about
+                        programming, and I love learning new things all the
+                        time. Solving challenging problems and creating cool
+                        software solutions really excites me!
+                    </p>
+                    <p>
+                        Besides programming, I enjoy creating 3D objects and
+                        exploring how design intersects with technology,
+                        allowing me to bring my ideas to life in a tangible way.
+
+                        I'm also passionate about sports, I enjoy the thrill of
+                        spearfishing, the teamwork and strategy of football, and
+                        the discipline of calisthenics. These activities keep me
+                        physically and mentally sharp, pushing my limits both in
+                        and out of the water.
+                    </p>
+                    <p>
+                        I'm truly thrilled to be on this journey of exploration
+                        and growth. I'm always seeking new opportunities to
+                        expand my abilities and make a positive impact through
+                        technology. Thanks for getting to know a bit about me!
+                        🙏
+                    </p>
+                </div>
+            </section>
+            <section>
+                <h2 class="section-title">Education</h2>
+                <div class="content">
+                    <p>
+                        🎓 Garage 404 (2024 - Present) in developpeur
+                        d'application web et web mobile, Programmation
+                        informatique
+                    </p>
+                    <p>
+                        🎓 Epitech - L'école de l'excellence informatique (2021
+                        - 2022)
+                    </p>
+                </div>
+            </section>
+            <section>
+                <h2 class="section-title">Skills</h2>
+                <div class="content">
+                    <p>
+                        PHP, SQL, JavaScript, TypeScript, React, NodeJS,
+                        tailwind, symfony, jquery ...
+                    </p>
+                </div>
+            </section>
+            <section>
+                <Link class="link" href="/projects" style="rounded">
+                    <Icon icon="code" size="1.33em" /> See My Projects
+                </Link>
+            </section>
+        </main>
+    </div>
 </BaseLayout>
 
 <style lang="scss">
-  .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-inline: 2.5rem;
-    gap: 1.5rem;
-
-    img {
-      width: 100%;
-      max-width: 22rem;
-    }
-  }
-
-  .about {
-    display: flex;
-    flex-direction: column;
-    gap: 3.5rem;
-  }
-
-  section {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    color: var(--gray-200);
-
-    .link {
-      justify-self: center;
-      align-self: center;
-      grid-column: 1 / -1;
-    }
-  }
-
-  .section-title {
-    grid-column-start: 1;
-    font-size: var(--text-xl);
-    color: var(--gray-0);
-  }
-
-  .content {
-    grid-column: 2 / 4;
-
-    p:not(:last-child) {
-      margin-bottom: 1rem;
-    }
-  }
-
-  @media (min-width: 50em) {
     .hero {
-      flex-direction: row;
-      gap: 6rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-inline: 2.5rem;
+        gap: 1.5rem;
+
+        img {
+            width: 100%;
+            max-width: 22rem;
+        }
     }
 
     .about {
-      display: grid;
-      grid-template-columns: 1fr 60% 1fr;
+        display: flex;
+        flex-direction: column;
+        gap: 3.5rem;
     }
 
     section {
-      display: contents;
-      font-size: var(--text-lg);
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        color: var(--gray-200);
+
+        .link {
+            justify-self: center;
+            align-self: center;
+            grid-column: 1 / -1;
+        }
     }
-  }
+
+    .section-title {
+        grid-column-start: 1;
+        font-size: var(--text-xl);
+        color: var(--gray-0);
+    }
+
+    .content {
+        grid-column: 2 / 4;
+
+        p:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+    }
+
+    @media (min-width: 50em) {
+        .hero {
+            flex-direction: row;
+            gap: 6rem;
+        }
+
+        .about {
+            display: grid;
+            grid-template-columns: 1fr 60% 1fr;
+        }
+
+        section {
+            display: contents;
+            font-size: var(--text-lg);
+        }
+    }
 </style>
