UPDATE: page contact ADD: CV PDF

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -21,9 +21,9 @@ import Skills from "../components/Skills.astro";
         />
         <Link
           class="link"
-          href="https://app.enhancv.com/share/5e64dcd1/?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic"
+          href="/assets/Bensadi_Nadir_CV.pdf"
           style="rounded"
-          external
+          download="Bensadi_Nadir_CV.pdf"
         >
           <Icon icon="readCV" size="1.33em" /> Download CV
         </Link>
