DELETE: com projects page UPDATE: email ContactCTA component

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -26,7 +26,7 @@ import RepoList from "../components/RepoList/RepoList";
     <main class="wrapper stack gap-10">
       <RepoList client:load />
 
-      <div class="links">  // tu dois comprendre ca
+      <div class="links">
 
         <Link
           class="link"
