--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -27,8 +27,7 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
   </div>
   <div>
 
-    <!-- vvvv ne pas oublier ca vvvv -->
-    <CallToAction href="mailto:stefangogov@proton.me">
+    <CallToAction href="mailto:bensadi.nadir42400@gmail.com">
       Send a message
       <Icon icon="message" size="1.2em" />
     </CallToAction>
