--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,7 @@
 import MainHead from "../components/MainHead.astro";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 interface Props {
   title?: string | undefined;
@@ -43,11 +44,14 @@ declare global {
   </head>
   <body>
     <!-- check if the web app has been alredy load -->
-    <div class="stack backgrounds">
-        <Nav />
-        <slot />
-        <Footer />
-    </div>
+     <SpeedInsights>
+
+       <div class="stack backgrounds">
+         <Nav />
+         <slot />
+         <Footer />
+        </div>
+    </SpeedInsights>
 
     <style>
       :root {
