--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,9 @@
 import MainHead from "../components/MainHead.astro";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
-import Analytics from '@vercel/analytics/astro'
+import Analytics from '@vercel/analytics/astro';
+import  SpeedInsights  from "@vercel/speed-insights/astro";
+
 
 interface Props {
   title?: string | undefined;
@@ -45,6 +47,7 @@ declare global {
   <body>
     <!-- check if the web app has been alredy load -->
     <Analytics />
+    <SpeedInsights />
     <div class="stack backgrounds">
         <Nav />
         <slot />
