UPDATE: photo de moi

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Link from "../components/ui/link.astro";
             alt="Headshot of Nadir"
             width="480"
             height="620"  
-            src="/assets/photo_de_moi_costume.jpeg"
+            src="/assets/photo_de_moi_EPITECH.png"
           />
         </div>
       </header>
