UPDATE: add website link to RepoCard and RepoList components; enhance GitHub icon styling

--- a/src/components/RepoCard/RepoCard.styles.scss
+++ b/src/components/RepoCard/RepoCard.styles.scss
@@ -38,6 +38,12 @@
     }
   }
 
+  &__githubIcon :hover
+  {
+    background: var(--accent-regular);
+    border-radius: 20px;
+  }
+
   &__description {
     font-size: var(--text-sm);
     margin: 0.8rem 0;
